--- a/index.html
+++ b/index.html
@@ -2,10 +2,9 @@
 
 <html lang="en" xmlns="http://www.w3.org/1999/xhtml">
 <head>
-    <meta charset="utf-8" />
-    <title></title>
+    <title>hello word</title>
 </head>
 <body>
-   hello word
+ 
 </body>
 </html>
